# terrible-renderer.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
examples/donut/: CMakeLists.txt  donut.cpp
examples/game/: CMakeLists.txt  game.cpp
examples/game/include/: map.h  tileset.h
examples/raymarching/: CMakeLists.txt  raymarching.cpp
examples/shader/: CMakeLists.txt  shader.cpp
examples/sphere/: CMakeLists.txt  sphere.cpp
include/: hsl.h  map.h  renderer.h  tileset.h  utils.h
scripts/: frames_to_video.py  text_to_png.py
src/: hsl.cpp  renderer.cpp
